테스트 코드 추가 (#150)